[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/InventoryIcon.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/graphics/ui/select.png" type="Texture" id=2]
[ext_resource path="res://src/ui/shop_item.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/BLKCHCRY.TTF"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[node name="ShopItem" type="Control"]
margin_left = -0.554016
margin_top = -0.460159
margin_right = 39.446
margin_bottom = 39.5402
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 6.05187
margin_right = 32.0
margin_bottom = 54.0519
rect_rotation = -90.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 51.2726
margin_top = 40.785
margin_right = 83.2726
margin_bottom = 88.785
rect_rotation = 90.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryIcon" parent="." instance=ExtResource( 1 )]

[node name="BuyPrice" type="Label" parent="."]
margin_left = -37.0
margin_top = 60.7578
margin_right = 89.0
margin_bottom = 107.758
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "-30"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellPrice" type="Label" parent="."]
margin_left = -37.0
margin_top = -62.2322
margin_right = 89.0
margin_bottom = -15.2322
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+30"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IslandQuantity" type="Label" parent="."]
margin_left = -37.0
margin_top = -93.6949
margin_right = 89.0
margin_bottom = -37.6949
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "inf."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerQuantity" type="Label" parent="."]
margin_left = -35.0
margin_top = 85.6656
margin_right = 91.0
margin_bottom = 150.666
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
